--- a/Views/Home/Privacy.cshtml
+++ b/Views/Home/Privacy.cshtml
@@ -5,4 +5,5 @@
 
 <p>Use this page to detail your site's privacy policy.</p>
 
+<iframe  src="https://192.168.10.93:9001"  style="border:none" data-html="true" width="800" height="600"></iframe>
 <iframe  src="https://192.168.10.88:5001"  style="border:none" data-html="true" width="800" height="600"></iframe>
