--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -4,12 +4,13 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - CalWebApi</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/lib/materialize/css/materialize.min.css" />
     <link rel="stylesheet" href="~/lib/fontawesome/css/all.min.css" />
     <link rel="stylesheet" href="~/lib/izimodal/css/iziModal.min.css">
     <link rel="stylesheet" href="~/css/site.css" />
     <link rel="stylesheet" href="~/lib/DataTables/datatables.css" />
-    <link rel="stylesheet" href="~/lib/DataTables/Buttons-1.7.0/css/buttons.bootstrap4.min.css" />
+    <link rel="stylesheet" href="~/lib/DataTables/DataTables-1.10.24/css/dtMaterialize.css" />
+    
     <link rel="stylesheet" href="~/css/QuartzDashboard.css" />
     @RenderSection("Styles", required: false)
 </head>
@@ -19,8 +20,8 @@
             <strong id="next-refresh-time" class="text-center align-self-center"></strong>
         </div>
     </header>
-    <div class="container-fluid">
-        <main role="main" class="pb-3">
+    <div class="row">
+        <main role="main" class="pb-3 col s10 offset-s1">
 
             @RenderBody()
         </main>
@@ -35,7 +36,7 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/jquery-validation/dist/jquery.validate.js" type="text/javascript"></script>
     <script src="~/lib/izimodal/js/iziModal.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/lib/materialize/js/materialize.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @RenderSection("Scripts", required: false)
     <script src="~/lib/DataTables/datatables.js" asp-append-version="true"></script>
