--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -19,22 +19,12 @@
 }
 
 
-<ul class="nav nav-tabs justify-content-center" id="myTab" role="tablist">
-    <li class="nav-item">
-        <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Home</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" id="calendar-tab" data-toggle="tab" href="#calendar" role="tab" aria-controls="calendar" aria-selected="false">Calendar</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" id="docs-tab" data-toggle="tab" href="#docs" role="tab" aria-controls="contact" aria-selected="false">Docs</a>
-    </li>
-</ul>
+
 <div class="tab-content" id="myTabContent">
-    <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
-        <div class="task-box shadow p-2">
-            <table id="task-dataTable" class="display table-hover table table-condensed table-sm">
-                <thead>
+    <div class="" id="home" role="tabpanel" aria-labelledby="home-tab">
+        <div class="">
+            <table id="task-dataTable" style="width:100%">
+                <thead class="">
                     <tr>
                         <th>Task Name</th>
                         <th>Group</th>
@@ -43,15 +33,16 @@
                         <th>Discription</th>
                     </tr>
                 </thead>
+                
             </table>
         </div>
     </div>
-    <div class="tab-pane fade" id="calendar" role="tabpanel" aria-labelledby="calendar-tab">
+    <div class="" id="calendar" role="tabpanel" aria-labelledby="calendar-tab">
         <div id="calendar" class="noselect">
         </div>
 
     </div>
-    <div class="tab-pane fade h-100" id="docs" role="tabpanel" aria-labelledby="Docs-tab">
+    <div class=" h-100" id="docs" role="tabpanel" aria-labelledby="Docs-tab">
         <object id="docs-item" data="/Doc" style="width:100%; height:82vh" class="shadow">
         </object>
     </div>
