--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -4,24 +4,35 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - CalWebApi</title>
-    <link rel="stylesheet" href="~/lib/materialize/css/materialize.min.css" />
     <link rel="stylesheet" href="~/lib/fontawesome/css/all.min.css" />
     <link rel="stylesheet" href="~/lib/izimodal/css/iziModal.min.css">
     <link rel="stylesheet" href="~/css/site.css" />
+    @*<link rel="stylesheet" href="~/lib/DataTables/DataTables-1.10.24/css/dtMaterialize.css" />*@
+    <link rel="stylesheet" href="~/lib/materialize/css/materialize.min.css" />
     <link rel="stylesheet" href="~/lib/DataTables/datatables.css" />
-    <link rel="stylesheet" href="~/lib/DataTables/DataTables-1.10.24/css/dtMaterialize.css" />
     
     <link rel="stylesheet" href="~/css/QuartzDashboard.css" />
     @RenderSection("Styles", required: false)
 </head>
 <body>
-    <header>
-        <div class="vw-100 top-banner border-bottom mb-1 bg-dark text-light">
-            <strong id="next-refresh-time" class="text-center align-self-center"></strong>
-        </div>
-    </header>
-    <div class="row">
-        <main role="main" class="pb-3 col s10 offset-s1">
+  
+            <div class="col s12 cyan darken-1 z-depth-1 center" style="height:3rem">
+                <ul class="tabs tabs-transparent right hide-on-med-and-down" id="myTab" role="tablist">
+                    <li class="tab">
+                        <a class="active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Home</a>
+                    </li>
+                    <li class="tab">
+                        <a class="" id="calendar-tab" data-toggle="tab" href="#calendar" role="tab" aria-controls="calendar" aria-selected="false">Calendar</a>
+                    </li>
+                    <li class="tab">
+                        <a class="" id="docs-tab" data-toggle="tab" href="#docs" role="tab" aria-controls="contact" aria-selected="false">Docs</a>
+                    </li>
+                </ul>
+            </div>
+        
+    
+    <div class="container" style="margin-top:2rem">
+        <main role="main" class="row">
 
             @RenderBody()
         </main>
