--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -22,11 +22,11 @@
 
 <div class="tab-content" id="myTabContent">
     <div class="" id="home" role="tabpanel" aria-labelledby="home-tab">
-        <div class="">
-            <table id="task-dataTable" style="width:100%">
+        <div class="material-table">
+            <table id="task-dataTable" class="dataTable" style="width:100%">
                 <thead class="">
                     <tr>
-                        <th>Task Name</th>
+                        <th >Task Name </th>
                         <th>Group</th>
                         <th>Previous Fire Time</th>
                         <th>Next Fire Time</th>
