--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -200,3 +200,58 @@ body {
 .indicator {
     bottom: 2.5px !important;
 }
+
+/*Datatable Custom CSS*/
+
+div.material-table table th.sorting_asc,
+div.material-table table th.sorting_desc {
+    color: rgba(0, 0, 0, 0.87);
+}
+
+div.material-table table th.sorting:after,
+div.material-table table th.sorting_asc:after,
+div.material-table table th.sorting_desc:after {
+    font-family: 'Material Icons';
+    font-weight: normal;
+    font-style: normal;
+    font-size: 16px;
+    line-height: 1;
+    letter-spacing: normal;
+    text-transform: none;
+    display: inline-block;
+    word-wrap: normal;
+    -webkit-font-feature-settings: 'liga';
+    -webkit-font-smoothing: antialiased;
+    content: "arrow_back";
+    -webkit-transform: rotate(90deg);
+    display: none;
+    vertical-align: middle;
+}
+
+div.material-table table th.sorting:hover:after,
+div.material-table table th.sorting_asc:after,
+div.material-table table th.sorting_desc:after {
+    display: inline-block;
+}
+
+div.material-table table th.sorting_desc:after {
+    content: "arrow_forward";
+}
+
+.selected {
+    background: #26a69a;
+}
+
+label select {
+    display:inline-block;
+    width:4rem;
+   
+}
+label #task-dataTable_filter input{
+    display:inline-block;
+    border:none;
+}
+
+#task-datatable_filter{
+    border:none;
+}
