--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -238,8 +238,16 @@ div.material-table table th.sorting_desc:after {
     content: "arrow_forward";
 }
 
-.selected {
+tbody .selected {
     background: #26a69a;
+}
+
+label{
+    font-size:.9rem!important
+}
+
+select{
+    border-color:#ccc
 }
 
 label select {
@@ -254,4 +262,35 @@ label #task-dataTable_filter input{
 
 #task-datatable_filter{
     border:none;
+}
+
+ul li a{
+    color:#000!important
+}
+
+.form-inline>label, .form-inline>select{
+    display:table-cell  
+}
+
+.short-w {
+    width: 5vw !important;
+}
+
+.cron-tabs::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    background-color: #F5F5F5;
+    border-radius: 10px;
+}
+
+.cron-tabs::-webkit-scrollbar {
+    height: 7px;
+    
+    background-color: #F5F5F5;
+}
+
+.cron-tabs::-webkit-scrollbar-thumb {
+    background-color: #ccc;
+    border: 1px solid #555555;
+    border-radius: 10px;
+    height: 3px;
 }
